--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.19.0",
     "react": "^17.0.1",
     "react-date-range": "^1.1.3",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
